--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -66,12 +66,12 @@ After enabling the `graphqlCacheControl` flag in `discovery.config.js` and runni
 
 1. Open the localhost path available in the terminal to see the store preview (e.g., `http://localhost:3000/`).
 2. On the store preview page, open your browser's **Developer Tools**.
-3. Go to the **Network** tab and look for **HIT** cache indicators on GET request as the image below:
-   ![cache-hit](https://vtexhelp.vtexassets.com/assets/docs/src/graphql-cache-control-flag___fc3e68d4013087ccf826b2b1b4217de9.png)
+3. Go to the **Network** tab and look for the **Cache-Control** column as the image below:
+   ![cache-hit](https://vtexhelp.vtexassets.com/assets/docs/src/graphql-cache-control-flag-localhost___70d2f2c3fbf40846180c7c0ed11d16f0.png)
 
+
+{/* This is a next step section, some questions for it: Is that possible to recommend `maxAge` and `staleWhileRevalidate` values? See an example on how we could demonstrate below
 ### Recommended values for `maxAge` and `staleWhileRevalidate`
-
-{/* Is that possible to recommend `maxAge` and `staleWhileRevalidate` values? See an example on how we could demonstrate below
 
 | **Use case** | **Suggested `maxAge`** | **Suggested `staleWhileRevalidate`** |
 | PLPs | 300s (5m) | 60s (1m)
