--- a/docs/faststore/components/molecules/rating-field.mdx
+++ b/docs/faststore/components/molecules/rating-field.mdx
@@ -11,15 +11,15 @@ The `RatingField` component allows users to input ratings in their product revie
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
     <OverviewSection containerStyle={{ flexDirection:'column', alignItems: 'normal' }}>
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" actionable />
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." actionable />
+      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
+      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
      </OverviewSection>
   </Tab>
   
   <Tab>
     ```tsx
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" actionable />
-      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." actionable />
+      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
+      <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
     ```
   </Tab>
 </Tabs>
@@ -39,7 +39,7 @@ import { RatingField } from '@faststore/ui'
 To apply the styles of this component in your FastStore project, import the following into your stylesheet:
 
 ```scss
-@import '@faststore/ui/src/components/molecules/InputField/styles.scss';
+@import '@faststore/ui/src/components/molecules/RatingField/styles.scss';
 ```
 
 Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
@@ -59,11 +59,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 #### Label
 
 <OverviewSection>
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" actionable />
+  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
 </OverviewSection>
 
 ```tsx
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" actionable />
+  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-default" />
 ```
 
 <TokenTable>
@@ -87,11 +87,11 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 #### Error
 
 <OverviewSection>
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." actionable />
+  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
 </OverviewSection>
 
 ```tsx
-  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." actionable />
+  <RatingField label="Rate the product from 1 to 5 stars" id="rating-field-error" error="This field is required." />
 ```
   
 <TokenTable>
