Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/components/molecules/rating-field.mdx
+++ b/docs/faststore/components/molecules/rating-field.mdx
@@ -4,7 +4,7 @@ components:
   - RatingField.tsx
 ---
 
-The `RatingField` component allows users to input ratings in their product reviews. It wraps an [Rating](https://developers.vtex.com/docs/guides/faststore/molecules-rating) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+The `RatingField` component allows users to submit ratings when submitting product reviews. It wraps the [Rating](https://developers.vtex.com/docs/guides/faststore/molecules-rating) component, which displays the rating system, and the associated [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label) component, which provides a text description for the rating field. 
 
 ## Overview
 
@@ -28,7 +28,7 @@ The `RatingField` component allows users to input ratings in their product revie
 
 ## Import
 
-Import the component from [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index)
+Import the component from the [@faststore/ui](https://developers.vtex.com/docs/guides/faststore/components-index) package.
 
 ```tsx
 import { RatingField } from '@faststore/ui'
@@ -42,7 +42,7 @@ To apply the styles of this component in your FastStore project, import the foll
 @import '@faststore/ui/src/components/molecules/RatingField/styles.scss';
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For more information, refer to [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
 ---
 
