Apply Localization review

--- a/docs/localization/tooltip.mdx
+++ b/docs/localization/tooltip.mdx
@@ -5,7 +5,7 @@ components:
   - Tooltip.tsx
 ---
 
-The `Tooltip` is a component that provides contextual information when users hover over or click an element.
+`Tooltip` is a component that provides contextual information when users hover over or click an element.
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
