Apply Localization review

--- a/docs/localization/textarea-field.mdx
+++ b/docs/localization/textarea-field.mdx
@@ -5,7 +5,7 @@ components:
   - TextareaField.tsx
 ---
 
-The `TextareaField` is a multi-line text field component to get long user inputs. The component wraps an [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
+`TextareaField` is a multi-line text field component to get long user inputs. The component wraps an [Textarea](https://developers.vtex.com/docs/guides/faststore/atoms-textarea) and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -61,7 +61,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -106,7 +106,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
   />
 </TokenTable>
 
-### Nested Elements
+### Nested elements
 
 #### Label
 
