--- a/docs/localization/dashboard.mdx
+++ b/docs/localization/dashboard.mdx
@@ -2,31 +2,31 @@
 title: 'FastStore WebOps - Dashboard'
 ---
 
-Once you have [created your FastStore project](https://developers.vtex.com/docs/guides/faststore/1-onboarding-starting-the-project#step-2-deploying-the-project) or are already working on customizing it, you can use the WebOps Dashboard to have an overview of your website’s deployments and performance.
+Once you [create your FastStore project](https://developers.vtex.com/docs/guides/faststore/1-onboarding-starting-the-project#step-2-deploying-the-project) or are already working on customizing it, you can use the WebOps dashboard to see an overview of website deployments and performance.
 
-The WebOps Dashboard provides a comprehensive overview of website builds and deploy previews and offers suggestions on how to improve your storefront's performance based on [Lighthouse scores](https://developer.chrome.com/docs/lighthouse/performance/performance-scoring).
+The WebOps dashboard provides a comprehensive overview of website builds and deploy previews and offers suggestions on how to improve storefront performance based on [Lighthouse scores](https://developer.chrome.com/docs/lighthouse/performance/performance-scoring).
 
 ![dashboard-overview](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@EDU-14723-faststore-dashboard/images/dashboard-overview.png)
 
-To access the WebOps Dashboard, go to **Storefront > FastStore WebOps** in the VTEX Admin. The Dashboard has four tabs: [Overview](#overview), [Deploys](#deploys), [Integrations](#integrations), and [Settings](#settings).
+To access the WebOps dashboard, go to **Storefront > FastStore WebOps** in the VTEX Admin. The dashboard has four tabs: [Overview](#overview), [Deploys](#deploys), [Integrations](#integrations), and [Settings](#settings).
 
 ---
 
 ## Overview
 
-The **Overview** tab provides a quick snapshot of your website's key details, including the live store URL, CMS information, and latest deploy.
+The **Overview** tab provides a quick snapshot of key website details, including the live store URL, CMS information, and latest deploy.
 
-### Production Overview
+### Production overview
 
-The **Production Overview** section provides the following information about the latest deploy of your live store:
+The **Production overview** section provides the following information about the latest live store deploy:
 
 | Field                 | Description                                                                                                                                                                                          |
 | :-------------------- | :----------------------------------------------------------------------------------------------- |
-| **Live Store**        | URL for your production environment, accessible to shoppers.                                     |
+| **Live store**        | URL of your production environment, accessible to shoppers.                                      |
 | **Repository**        | GitHub repository associated with the project.                                                   |
-| **Source**            | Commit for the current deployment, including the date, time, and who made it.                    |
-| **CMS Provider**      | Link to [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview). |
-| **CMS Project**       | Link to the FastStore project in Headless CMS.                                                   |
+| **Source**            | Commit for the current deployment, including date, time, and author.                             |
+| **CMS provider**      | Link to [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview). |
+| **CMS project**       | Link to the FastStore project in Headless CMS.                                                   |
 
 #### Live deployment statuses
 
@@ -35,11 +35,11 @@ This section also displays the status of the live deployment:
 - **Success:** The commit was deployed to the production environment and is live.
 - **Queued:** The commit is next in line to be deployed.
 - **In progress:** The commit is currently being deployed.
-- **Failed:** The deployment failed. Further details can be found by clicking the link below the `Deploy` button.
+- **Failed:** The deployment failed. You can find more details by clicking the link below the `Deploy` button.
 
-### Lighthouse Scores
+### Lighthouse scores
 
-When your store goes live (in production), ensuring optimal performance and a good user experience becomes crucial. The Lighthouse Scores section offers insights into four key areas measured by Lighthouse, helping you understand their impact on your store's performance.
+When your store goes live (in production), ensuring optimal performance and a good user experience is crucial. The Lighthouse scores section offers insights into four key areas measured by Lighthouse, helping you understand their impact on store performance.
 
 - **Performance:** Indicates how fast your pages load.
 - **Accessibility:** Reflects how usable your pages are for people with disabilities.
@@ -48,7 +48,7 @@ When your store goes live (in production), ensuring optimal performance and a go
 
 These scores are based on the pages defined for testing in the [Integrations](#integrations) tab.
 
-### Production Deploys
+### Production deploys
 
 This section lists the recent deploys to your production store. Each item on the list is composed of the following:
 
@@ -56,25 +56,25 @@ This section lists the recent deploys to your production store. Each item on the
 
 For a complete list of all store deployments and details about them, see the [Deploys](#deploys) tab.
 
-### Preview Deploys
+### Preview deploys
 
-This section lists all the deploy previews created for GitHub branches in your project repository. These previews are automatically available for each pull request opened for a corresponding branch.
+This section lists all the deploy previews created for GitHub branches in your project repository. These previews are automatically available for each pull request opened in its corresponding branch.
 
 ## Deploys
 
-The **Deploys** tab provides insights into your store's deployments, including their status (success, failed, etc.). The table below summarizes the key features of the Deploys page.
+The **Deploys** tab provides insights into store deployments, including their status (success, failed, etc.). The table below summarizes the key features of the Deploys page.
 
 ![deploys-webops](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@EDU-14723-faststore-dashboard/images/deploys-webops.png)
 
 | **Feature** | Description |
 | ----------- | ----------- |
-| 1 - Search bar | Searches by deploy ID, commit, message, or author. |
-| 2 - Pagination | Navigates through pages of deployment data. |
-| 3 - Enviroment | Filters deployments by environment: <ol><li>Production: The live store where customers can interact with. </li><li>Preview: Test environment for new features, design changes, and code modifications before releasing them to production.</li></ol> |
-| 4 - Branch | Filters deployments by GitHub branches. |
-| 5 - Status | Filters deploy status: <ol><li>Queued: The deployment is the next in line to be executed.</li><li>In progress: The deployment is underway.</li><li>Success: The deployment has completed successfully.</li><li>Failed: The deployment process encountered an error and did not complete as expected.</li></ol> |
-| 6 - Sort by | Filters deployments by **Latest first** or **Oldest First**. |
-| 7 - Deployments table | Lists each store deployment with the following information: <ol><li>Score: Lighthouse score for the deployment.</li><li>Source: Commit ID and branch.</li><li>Author: Deploy author and the date and time of the deployment.</li><li>Environment: The environment which received the changes, Production or Preview.</li><li>Deploy ID: The ID of the specific deployment.</li><li>Status: The deploy status.</li></ol>
+| 1 - Search bar        | Allows you to search by deploy ID, commit, message, or author. |
+| 2 - Pagination        | Allows you to navigate through pages of deployment data. |
+| 3 - Enviroment        | Filters deployments by environment: <ol><li>Production: The live store customers can interact with. </li><li>Preview: Test environment for new features, design changes, and code modifications before releasing them to production.</li></ol> |
+| 4 - Branch            | Filters deployments by GitHub branches.                                                                                                                                                                                                                                                                                                                                                                       |
+| 5 - Status            | Filters deploy status: <ol><li>Queued: The deployment is next in line to be executed.</li><li>In progress: The deployment is being executed.</li><li>Success: The deployment has completed successfully.</li><li>Failed: The deployment process encountered an error and didn't complete as expected.</li></ol> |
+| 6 - Sort by           | Filters deployments by **Latest first** or **Oldest First**. |
+| 7 - Deployments table | Lists all store deployments with the following information: <ol><li>Score: Lighthouse score for the deployment.</li><li>Source: Commit ID and branch.</li><li>Author: Deploy author and the date and time of the deployment.</li><li>Environment: The environment that was changed, Production or Preview.</li><li>Deploy ID: The ID of the specific deployment.</li><li>Status: The deploy status.</li></ol> |
 
 ### Deployment details
 
@@ -82,11 +82,11 @@ For more information, click any entry in the deploy table.
 
 ![deployment-details](https://vtexhelp.vtexassets.com/assets/docs/src/deployment-details___011bb7391157ad21eb965d8bcfc75b03.gif)
 
-In the **Deploy Steps** section, select a step (example: **Build - Discovery**) to view logs. These logs appear on the right and help diagnose failed deployments.
+In the **Deploy steps** section, select a step (example: **Build - Discovery**) to view logs. The logs show on the right and help diagnose failed deployments.
 
 ## Integrations
 
-The **Integrations** tab allows you to configure store pages for Lighthouse Tests. Here, you can specify the URLs for a product listing page (PLP) and a product details page (PDP) to undergo automatic Lighthouse score testing during deployments, ensuring a consistent testing experience.
+The **Integrations** tab allows you to configure store pages for Lighthouse tests. You can specify the URLs for a product listing page (PLP) and a product details page (PDP) to undergo automatic Lighthouse score testing during deployments, ensuring a consistent testing experience.
 
 ![integrations-webops](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@EDU-14723-faststore-dashboard/images/integrations-webops.png)
 
@@ -94,32 +94,32 @@ The **Integrations** tab allows you to configure store pages for Lighthouse Test
 
 To set the pages you want to test with Lighthouse, follow these steps:
 
-1. In the **Path for a PLP** field, enter the [category](https://help.vtex.com/en/tutorial/what-is-a-category--6HV4Q3E2FauUoOQoiCCgCg) slug defined in the Catalog.
-2. In the **Path for a PDP** field, enter the slug for the specific product detail page (PDP) you want to test.
+1. In the **Path for a PLP** field, enter the [category](https://help.vtex.com/en/tutorial/what-is-a-category--6HV4Q3E2FauUoOQoiCCgCg) slug defined in Catalog.
+2. In the **Path for a PDP** field, enter the slug for the specific PDP you want to test.
 3. Click `Save`.
 
-Once you've set the pages for testing and after a new deployment, go to the **Overview** tab and access the **Lighthouse Scores** section to check the scores for those pages.
+Once you've set the pages for testing and after a new deployment, go to the **Overview** tab and access the **Lighthouse scores** section to check the scores for those pages.
 
 ## Settings
 
-The **Settings** tab is where you configure your store’s production domain as part of the go-live process. Here, you can add your primary production domain to ensure it is properly set up for customer access. Before adding the domain, make sure the [external DNS settings](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns) are correctly configured in your VTEX Account Settings.
+The **Settings** tab is where you configure the production domain of the store as part of the go-live process. You can add your primary production domain to make sure it's properly set up for customer access. Before adding the domain, make sure the [external DNS settings](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns) are correctly configured in your VTEX account settings.
 
 ![settings-webops](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@EDU-14723-faststore-dashboard/images/settings-webops.png)
 
 ### Production domain
 
-In the **Production domain** section, choose your store’s domain from the dropdown list within the **Host** field and then click `Add` to set up the primary domain of your store.
+In the **Production domain** section, choose the store domain from the dropdown list in the **Host** field and click `Add` to set up the primary domain of your store.
 
-### Current Domains
+### Current domains
 
-The **Current Domains** section displays the default and primary domains that have been configured for your store. This section serves as a reference point to ensure that your domains are correctly set up in WebOps. By checking this list, you can confirm whether your domains have been successfully added and are ready for use in the FastStore environment. 
+The **Current domains** section displays the default and primary domains that have been configured for your store. This section serves as a reference point to ensure that your domains are correctly set up in WebOps. By checking this list, you can confirm whether your domains have been successfully added and are ready for use in the FastStore environment. 
 
-If your domain is not listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live process.
+If your domain isn't listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live.
 
 ## Deleting the project
 
-To delete your FastStore project, click the **More actions menu** (`⋮`). Then, click **Delete Project**.
+To delete your FastStore project, click the **More actions menu** (`⋮`). Then, click **Delete project**.
 
-A modal to confirm your choice will open.
+A modal to confirm your action will open.
 
-> ⚠️ Proceed with caution. Deleting the project is irreversible and will permanently remove all deployments and domains associated with it.
+> ⚠️ Proceed with caution. Deleting the project can't be undone and will permanently remove all deployments and domains associated with it.
