EDU-14964: Add new experimental hooks

--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -74,6 +74,9 @@ Hooks provide features or statuses from native components that you can integrate
 |`useDiscountPercent_unstable`|Calculates the discount percentage for a given price.|
 |`useFormattedPrice_unstable`|Formats a price value based on the current locale.|
 |`useLocalizedVariables_unstable`|Provides localized variables for use in components.|
+|`useCreateUseGalleryPage_unstable`|Provides a hook to manage the creation of a gallery page.|
+|`useGalleryPage_unstable`|Provides a hook to manage the state and functionality of a gallery page.|
+|`useGalleryPageContext_unstable`|Provides access to and management of the context for a gallery page.|
 |`useProductGalleryQuery_unstable`|Retrieves product gallery images.|
 |`useProductLink_unstable`|Generates a product link based on the product ID.|
 |`useProductQuery_unstable`|Retrieves product details.|
