--- a/docs/localization/textarea.mdx
+++ b/docs/localization/textarea.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Textarea"
-excerpt: Multi-line fields used to get long user inputs.
+excerpt: Multi-line fields to get long user inputs.
 components:
   - Textarea.tsx
 ---
@@ -32,9 +32,9 @@ Import the component from [@faststore/ui](https://developers.vtex.com/docs/guide
 import { Textarea } from '@faststore/ui'
 ```
 
-### Import Styles into your FastStore project
+### Import styles to your FastStore project
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply the styles of this component in your FastStore project, import the following to your stylesheet:
 
 ```scss
 @import '@faststore/ui/src/components/atoms/Textarea/styles.scss';
@@ -50,7 +50,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Design Tokens
+## Design tokens
 
 <TokenTable>
   <TokenRow
@@ -172,7 +172,7 @@ For further customization, you can use the following data attributes:
 
 ---
 
-## Best Practices
+## Best practices
 
 ### ✅ Do's
 
