Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -23,11 +23,11 @@ The **Production overview** section provides the following information about the
 
 | Field                 | Description                                                                                                                                                                                          |
 | :-------------------- | :----------------------------------------------------------------------------------------------- |
-| **Live store**        | URL of your production environment, accessible to shoppers.                                      |
+| **Live Store**        | URL of your production environment, accessible to shoppers.                                      |
 | **Repository**        | GitHub repository associated with the project.                                                   |
 | **Source**            | Commit for the current deployment, including date, time, and author.                             |
-| **CMS provider**      | Link to [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview). |
-| **CMS project**       | Link to the FastStore project in Headless CMS.                                                   |
+| **CMS Provider**      | Link to [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview). |
+| **CMS Project**       | Link to the FastStore project in Headless CMS.                                                   |
 
 #### Live deployment statuses
 
@@ -83,7 +83,7 @@ For more information, click any entry in the deploy table.
 
 ![deployment-details](https://vtexhelp.vtexassets.com/assets/docs/src/deployment-details___011bb7391157ad21eb965d8bcfc75b03.gif)
 
-In the **Deploy steps** section, select a step (example: **Build - Discovery**) to view logs. The logs show on the right and help diagnose failed deployments.
+In the **Deploy Steps** section, select a step (example: **Build - Discovery**) to view logs. The logs show on the right and help diagnose failed deployments.
 
 ## Integrations
 
@@ -99,7 +99,7 @@ To set the pages you want to test with Lighthouse, follow these steps:
 2. In the **Path for a PDP** field, enter the slug for the specific PDP you want to test.
 3. Click `Save`.
 
-Once you've set the pages for testing and after a new deployment, go to the **Overview** tab and access the **Lighthouse scores** section to check the scores for those pages.
+Once you've set the pages for testing and after a new deployment, go to the **Overview** tab and access the **Lighthouse Scores** section to check the scores for those pages.
 
 ## Settings
 
@@ -113,13 +113,13 @@ In the **Production domain** section, choose the store domain from the dropdown 
 
 ### Current domains
 
-The **Current domains** section displays the default and primary domains that have been configured for your store. This section serves as a reference point to ensure that your domains are correctly set up in WebOps. By checking this list, you can confirm whether your domains have been successfully added and are ready for use in the FastStore environment. 
+The **Current Domains** section displays the default and primary domains that have been configured for your store. This section serves as a reference point to ensure that your domains are correctly set up in WebOps. By checking this list, you can confirm whether your domains have been successfully added and are ready for use in the FastStore environment. 
 
 If your domain isn't listed, it may indicate an issue with the configuration or DNS settings that need to be addressed before proceeding with the go-live.
 
 ## Deleting the project
 
-To delete your FastStore project, click the **More actions menu** (`⋮`). Then, click **Delete project**.
+To delete your FastStore project, click the **More actions menu** (`⋮`). Then, click **Delete Project**.
 
 A modal to confirm your action will open.
 
