Apply Localization review

--- a/docs/localization/modal.mdx
+++ b/docs/localization/modal.mdx
@@ -8,11 +8,11 @@ components:
   - ModalFooter.tsx
 ---
 
-The `Modal` is a dialog window that sits on top of an application's main view.
+`Modal` is a dialog window that sits on top of an application's main view.
 
-The `Modal` component is a compound of the following:
+The `Modal` component consists of the following:
 
-- `Modal`: Provides dialog window with card-style base.
+- `Modal`: Provides a dialog window with a card-style base.
 - `ModalHeader`: Wraps the Modal header. It may contain a title, description, and a close button. (Optional)
 - `ModalBody`: Wraps the Modal body content. (Optional)
 - `ModalFooter`: Wraps the Modal footer that contains buttons for canceling or submitting.
@@ -87,9 +87,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Props
 
-All modal-related components support all attributes also supported by the `<div>` tag.
+All modal-related components support all attributes that are also supported by the `<div>` tag.
 
-Besides those attributes, the following props are also supported:
+The following props are also supported:
 
 ### Modal
 
