--- a/docs/faststore/docs/my-account/extensions.mdx
+++ b/docs/faststore/docs/my-account/extensions.mdx
@@ -2,7 +2,7 @@
 title: "Extending My Account"
 ---
 
-In this guide, you will learn how to extend the **My Account** page by creating new pages or adding new sections to the default pages.
+In this guide, you'll learn how to extend the **My Account** page by creating new pages or adding new sections to the default pages.
 
 Check if the [default My Account pages](https://developers.vtex.com/docs/guides/faststore/my-account-overview#default-my-account-pages) meet your needs. If not, you can [create a new page](#creating-new-pages) or [add a new section](#adding-new-sections) to better fit your requirements. These extensions allow you to customize the My Account experience without changing the default structure.
 
