--- a/docs/faststore/components/molecules/rating.mdx
+++ b/docs/faststore/components/molecules/rating.mdx
@@ -73,7 +73,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Design tokens
+## Design Tokens
 
 <TokenTable>
   <TokenRow token="--fs-rating-gap" value="var(--fs-spacing-0)" />
